--- a/frontend/src/components/css/Footer.css
+++ b/frontend/src/components/css/Footer.css
@@ -15,3 +15,13 @@ footer {
   margin: 30px;
   font-weight: solid;
 }
+
+@media (max-width: 500px) {
+  footer {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    font-weight: solid;
+    padding: 5px;
+  }
+}
