--- a/frontend/src/components/css/Login.css
+++ b/frontend/src/components/css/Login.css
@@ -47,3 +47,19 @@ button {
   width: 100%;
   margin: 10px;
 }
+
+.reset {
+  background-color: black;
+  text-decoration: underline;
+}
+
+@media (max-width: 500px) {
+  .login-form {
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
+    padding: 10px;
+    border-radius: 5px;
+    align-content: center;
+  }
+}
