--- a/frontend/src/components/css/Register.css
+++ b/frontend/src/components/css/Register.css
@@ -73,3 +73,33 @@ button {
   width: 100%;
   margin: 10px;
 }
+
+@media (max-width: 500px) {
+  .register-form {
+    width: 100%;
+    max-width: 400px;
+    background-color: whitesmoke;
+    border-radius: 5px;
+    justify-content: center;
+  }
+
+  input {
+    width: 90%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin: 10px;
+  }
+
+  button {
+    background-color: #4c9eaf;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 90%;
+    margin: 10px;
+  }
+}
