--- a/frontend/src/components/css/Register.css
+++ b/frontend/src/components/css/Register.css
@@ -10,7 +10,6 @@ body {
   margin: auto;
   width: 100%;
   max-width: 400px;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,7 +22,7 @@ span {
 
 img {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 h1 {
@@ -41,37 +40,36 @@ h3 {
   width: 100%;
   max-width: 400px;
   margin: auto;
-  padding: 50px;
-  background-color: whitesmoke;
+  background-color: rgba(245, 245, 245, 0.582);
   border-radius: 5px;
   align-content: center;
+  padding: 20px;
 }
 
 label {
   font-size: 24px;
-  padding: 10px;
   font-weight: bold;
   color: black;
 }
 
 input {
   width: 100%;
-  padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  margin: 10px;
+  align-items: center;
+  padding: 10px;
 }
 
 button {
   background-color: #4c9eaf;
   color: white;
-  padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   width: 100%;
-  margin: 10px;
+  padding: 10px;
+  margin-top: 10px;
 }
 
 @media (max-width: 500px) {
